# sciloom-pipeline

./: .env.example  .gitignore  DESIGN.MD  NOTES.md  PROGRESS.MD  README.md  SETUP.MD  alembic.ini  opencode.json  package-lock.json  package.json  pdf-to-markdown.py  pyproject.toml
.agents/skills/: SUMMARY.md  dtr_interface.md  extract_epic.md  extract_orkg.md  from_static.md  helpers.md  load_datatype.md  request_dtr.md  to_jsonld.md
.opencode/agents/: claim-extraction-agent.md  claim-replication-agent.md  code-execution-agent.md  dtreg-generation-agent.md
example_repo/.sciloom/: CLAIMS.json  CODE_EXECUTION_SUCCESS.json  PAPER.md
example_repo/REPO/: README.md  Table_S1._Detailed_information_on_feather_sample_collection_date__location__source__and_corticosterone_concentrations.csv  Table_S2._Metadata_for_the_variables_included_in_table_S1.csv  dtreg_output_CLAIM-001.jsonld  dtreg_output_CLAIM-002.jsonld  dtreg_output_CLAIM-003.jsonld  dtreg_output_CLAIM-004.jsonld  dtreg_output_CLAIM-005.jsonld  dtreg_output_CLAIM-006.jsonld  dtreg_output_CLAIM-007.jsonld  generate_dtreg.py  replicate_CLAIM_001.py  replicate_CLAIM_002.py  (+5 more)
examples/: README.md  algorithm-evaluation.md  data-preprocessing.md  group-comparison.md
sciloom_pipeline/: CLAIMS.json  config.py  main.py
sciloom_ui/: .gitignore  README.md  angular.json  package-lock.json  package.json
tests/: conftest.py  test_api.py  test_claim_extraction.py  test_claim_replication.py  test_code_execution.py  test_database.py  test_dtreg_generation.py  test_job_service.py  test_sandbox_service.py
(+59 files in other folders)
