[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sciloom_pipeline*"]

[project]
name = "sciloom-pipeline"
version = "0.0.1"
description = "SciLoom Pipeline: Agentic orchestration for Opencode jobs that make research papers machine readable"
requires-python = ">=3.12"
dependencies = ["python-dotenv>=1.2.2", "fastapi[standard]>=0.136.1", "honker>=0.2.4", "pydantic-ai>=1.104.0"]
